test-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-test-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: solar-system-container
        image: aniketpuro/solar-system:latest
        ports:
        - containerPort: 80
