template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockwhitecolor
spec:
  crd:
    spec:
      names:
        kind: K8sBlockWhiteColor
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockwhitecolor

        violation[{"msg": msg}] {
          input.review.object.kind == "ConfigMap"
          input.review.object.data.TRIANGLE_COLOR == "white"
          msg := "OPA Policy Violation: TRIANGLE ke liye white color allowed nahi hai. Custom DevSecOps rule triggered!"
        }
